package DesignPatterns.BehavioralType.Command;

public class LightReceiver {

    public void on() {
        System.out.println("Light On");
    }

    public void off() {
        System.out.println("Light Off");
    }
}
