package DesignPatterns.BehavioralType.Command;

public class TVReceiver {
	
	public void on() {
		System.out.println("TV On！");
	}
	
	public void off() {
		System.out.println("Tv Off！");
	}
}
